--- a/company.html
+++ b/company.html
@@ -31,10 +31,19 @@
             <hr>
             <p>Initially, BMW focused on producing aircraft engines, a legacy still evident in its iconic blue-and-white logo, which symbolizes a spinning propeller against the sky. After World War I, the company transitioned to manufacturing motorcycles and eventually cars, with its first automobile, the BMW 3/15, debuting in 1929.This marked the beginning of BMW's journey in creating high-performance and luxury vehicles that would redefine automotive standards worldwide.</p>
             <hr>
-            <p>Today, BMW is renowned for its commitment to innovation, performance, and design. Its product portfolio includes a wide range of vehicles under the BMW, MINI, and Rolls-Royce brands, catering to various customer preferences. The company also emphasizes sustainability, investing heavily in electric and hybrid vehicles, such as the BMW i3 and i8 models, as part of its “BMW i” sub-brand. The company continues to expand its range of electrified vehicles, including fully electric models like the BMW iX and i4, showcasing its dedication to reducing environmental impact.</p>
+            <p>Today, BMW is renowned for its commitment to innovation, performance, and design. Its product portfolio includes a wide range of vehicles under the BMW, MINI, and Rolls-Royce brands, catering to various customer preferences. The company also emphasizes sustainability, investing heavily in electric and hybrid vehicles, such as the BMW i3 and i8 models, as part of its “BMW i” sub-brand. The company continues to expand its range of electrified vehicles, including fully electric models like the BMW iX and i4, showcasing its dedication to reducing environmental impact.BMW's approach to modern mobility goes beyond just producing vehicles. The company is at the forefront of developing autonomous driving technologies and intelligent connectivity solutions, ensuring a seamless driving experience.</p>
             <hr>
-            <p>BMW maintains a strong global presence, with production facilities and sales networks in numerous countries. Its dedication to quality and customer satisfaction has solidified its reputation as one of the most respected luxury automotive manufacturers worldwide.This reputation is further enhanced by its innovative technologies, cutting-edge design, and a consistent focus on meeting the evolving demands of modern mobility.</p>
+            <p>BMW maintains a strong global presence, with production facilities and sales networks in numerous countries. Its dedication to quality and customer satisfaction has solidified its reputation as one of the most respected luxury automotive manufacturers worldwide.This reputation is further enhanced by its innovative technologies, cutting-edge design, and a consistent focus on meeting the evolving demands of modern mobility.In addition to its impressive lineup of vehicles, BMW invests heavily in sustainable development and environmental responsibility.The company is a pioneer in electric mobility through its BMW i series, reflecting its commitment to reducing carbon emissions and promoting greener transportation solutions. BMW also emphasizes continuous research and development, ensuring that its products incorporate the latest advancements in automotive engineering, safety features, and digital connectivity.</p>
         </div>
     </section>
+
+
+    <div class="map-container">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d214345.46731884705!2d11.360019776349764!3d48.1548256092016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e763c0d7d52ff%3A0x424c40dd6f9c430!2sMunich%2C%20Germany!5e0!3m2!1sen!2sde!4v1706890575234!5m2!1sen!2sde" 
+            allowfullscreen>
+        </iframe>
+    </div>
+    
 </body>
 </html>
